# benfords-law

./: CHANGELOG.md  README.md  benfords-law.cabal  doc-index.html  index.html  schema
.github/workflows/: build-ci.yml
all/: doc-index-33.html  doc-index-60.html  doc-index-62.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-Y.html  doc-index-Z.html  index.html
benfords-law-0.1.0.0/: Number-Benford.html  benfords-law.haddock  benfords-law.txt  doc-index.html  doc-index.json  index.html
benfords-law-0.1.0.0/src/: Number.Benford.html
src/Number/: Benford.hs
test/: Spec.hs
