name:                benfords-law
version:             0.1.0.0
synopsis:            Determining probabilities and generating sequences according to Benford's law.
-- description:
homepage:            https://github.com/hapytex/benfords-law#readme
license:             BSD3
license-file:        LICENSE
author:              Willem Van Onsem
maintainer:          hapytexteu+gh@gmail.com
copyright:           2020 Willem Van Onsem
category:            utils
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
      Number.Benford
  build-depends:
      base >= 4.7 && < 5
    , random >=1.0.0
  default-language:    Haskell2010

test-suite newcombs-law
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base
    , benfords-law
    , test-framework
    , test-framework-quickcheck2
    , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/hapytex/benfords-law
